--- a/css/styles.css
+++ b/css/styles.css
@@ -370,7 +370,18 @@ body {
                                             
                                             
                                     }
-                                 
+                                    .clients-title {
+                                        display: flex;
+                                            justify-content: center;
+                                            align-items: center;
+                                            color: #AFB1B8;
+                                            width: 170px;
+                                            height: 92px;
+                                            border: 1px solid #AFB1B8;
+                                            border-radius: 4px;
+                                    }
+                                                   
+                                
                                     
                                         
         /* Footer */
