--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background-color: #F5F5F5;
+    background-color: var(--primary-white-color);
         color: var(--title-text-color);
         font-family: 'Roboto', sans-serif;
         letter-spacing: 0.03em;
@@ -71,7 +71,6 @@ body {
         display: flex;
      align-items: center;
         flex-wrap: wrap;
-        border: 1px solid #ECECEC;
         padding: auto;
 }
 
@@ -199,7 +198,6 @@ body {
             max-width: 1600px;
             margin-left: auto;
             margin-right: auto;
-            margin-bottom: 94px;
             color: var(--primary-white-color);
             font-weight: 900;
             font-size: 44px;
@@ -270,6 +268,8 @@ body {
                 line-height: 1.7;
         }
                  .pages {
+                    width: 270px;
+                    height: 120px;
                      padding-top: 25px;
                      padding-bottom: 25px;
                      padding-left: 101px;
@@ -291,15 +291,15 @@ body {
                     justify-content: center;
                 }
         
-                .work-title {
-                    margin-bottom: 50px;
-                }
         
                 .work .item:not(:last-child) {
                     margin-right: 30px;
                 }
 
                   /* Info team*/
+                  .section-team {
+                    background-color: #F5F4FA;
+                  }
                   
              .team {
                 display: flex;
@@ -315,7 +315,7 @@ body {
                         text-align: center;
                         letter-spacing: 0.03em;
                 }
-                .team-title {
+                .description-title {
                 color: var(--title-text-color);
                 font-weight: 500;
                 font-size: 16px;
@@ -323,7 +323,7 @@ body {
                 text-align: center;
                 letter-spacing: 0.03em;
                  }
-                .text-team {
+                .description {
                  color: #757575;
                 font-size: 16px;
                 line-height: 1.18;
@@ -340,46 +340,17 @@ body {
                 border-radius: 0px 0px 4px 4px;
                                 }
                                 /* Постійні клієнти */
+                        .client-title {
+                            color: var(--title-text-color);
+                            font-weight: 700;
+                            font-size: 36px;
+                            line-height: 42px;
+                            text-align: center;
+                            letter-spacing: 0.03em;
                                 
-                                .clients {
-                                    display: flex;
-                                    gap: 30px;
-                                    list-style: none;
-                                    margin-left: 215px;
-                                    margin-right: 215px;
-                                    
-                                    
-                                    
-                                }
-                                .clients-title {
-                                
-                                        
-                                        width: 170px;
-                                            height: 92px;
-                                            align-items: center;
-                                            justify-content: center;
-                                }
-                                    .client-text {
-                                        margin-bottom: 50px;
-                                        color: var(--title-text-color);
-                                        font-weight: 700;
-                                            font-size: 36px;
-                                            line-height: 1.166;
-                                            text-align: center;
-                                            letter-spacing: 0.03em;
-                                            
-                                            
-                                    }
-                                    .clients-title {
-                                        display: flex;
-                                            justify-content: center;
-                                            align-items: center;
-                                            color: #AFB1B8;
-                                            width: 170px;
-                                            height: 92px;
-                                            border: 1px solid #AFB1B8;
-                                            border-radius: 4px;
-                                    }
+                        }
+
+            
                                                    
                                 
                                     
