--- a/css/styles.css
+++ b/css/styles.css
@@ -350,6 +350,88 @@ body {
                                 
                         }
 
+                        .page {
+                            box-sizing: border-box;
+                            width: 106px;
+                             height: 60px;
+                            margin-right: 30px;
+                                
+                        }
+
+                        /* Socials */
+
+.team {
+    display: flex;
+}
+
+.team-background {
+    background-color: #F5F4FA;
+}
+
+.team .item:not(:last-child) {
+    margin-right: 30px;
+}
+
+.team .item {
+    background-color: #FFFFFF;
+    padding-bottom: 30px;
+
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+
+}
+
+
+.team .image {
+    margin-bottom: 30px;
+}
+
+
+.team .title {
+    color: var(--title-text-color);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.2;
+    margin-top: 0em;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.team .text {
+    color: #757575;
+    font-size: 16px;
+    line-height: 1.2;
+    margin-top: 0;
+    margin-bottom: 16px;
+    text-align: center;
+}
+
+.team-social-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+    color: #AFB1B8;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+}
+
+.team-social-link:hover,
+.team-social-link:focus {
+    color: #FFFFFF;
+    background-color: #2196F3;
+}
+
+.socials {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+}
+
+                    
+
             
                                                    
                                 
