--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
         font-family: 'Roboto', sans-serif;
         letter-spacing: 0.03em;
     }
-    /* Logo */
+    /* Лого */
             a{
                 list-style: none;
                 text-decoration: none;
