--- a/css/styles.css
+++ b/css/styles.css
@@ -185,12 +185,22 @@ body {
      color: var(--accent-color);
      text-decoration: none;
  }
+
+ .icon-tel,
+ .icon-mail {
+     fill: currentColor;
+ }
             .icon-tel {
           margin-right: 10px;
           }
     
           .icon-mail {
               margin-right: 10px;
+              
+          }
+          .icon-mail:hover,
+          .icon-mail:focus {
+            color: #2196F3;
           }
     /* Hero */
     .hero {
@@ -309,6 +319,10 @@ body {
                 justify-content: center;
                 gap: 30px;
              }
+
+             .team-social-link {
+             fill: currentColor;      
+             }
                     .title-team {
                         margin-bottom: 50px;
                         color: var(--title-text-color);
@@ -362,12 +376,13 @@ body {
                                               height: 92px;
                                               border: 1px solid #AFB1B8;
                                               border-radius: 4px;
+                                            fill: #AFB1B8;
                                           }
                     
                                           .customers-link:hover,
                                           .customers-link:focus {
-                                              color: var(--accent-color);
-                                              border-color: var(--accent-color);
+                                            fill: var(--accent-color);
+                                                border: 1px solid #2196F3;
                                           }
 .team {
     display: flex;
@@ -455,7 +470,8 @@ body {
     color: #FFFFFF;
     background-color: #2196F3;
 }
-                                    
+
+                              
         /* Footer */
            
                 
@@ -463,7 +479,9 @@ body {
               background-color: #2F303A;
               padding: 60px 0;
           }
-    
+          .footer-social-link {
+            fill: currentColor;     
+          }
           .footer .container {
               display: flex;
           }
