--- a/css/styles.css
+++ b/css/styles.css
@@ -235,11 +235,12 @@ body {
                 font-size: 14px;
                 line-height: 1.14;
                 letter-spacing: 0.03em;
-                text-transform: uppercase;
                 margin-bottom: 10px;
         }
         
-        
+        .img {
+            display: block;
+        }
         .section .section-title {
             color: var(--title-text-color);
                     font-weight: 700;
@@ -284,9 +285,7 @@ body {
                     background-color: #F5F4FA;
                   }
 
-                 .description {
-                 padding: 20px 24px;
-                    }
+                 
                   
              .team {
                 display: flex;
@@ -295,7 +294,7 @@ body {
              }
 
              .team-social-link {
-             fill: currentColor;      
+             fill: currentColor;    
              }
                     .title-team {
                         margin-bottom: 50px;
@@ -318,8 +317,6 @@ body {
                 .description {
                  color: #757575;
                 font-size: 16px;
-                padding-top: 10px;
-                margin-bottom: 30px;
                 line-height: 1.18;
                 text-align: center;
                 letter-spacing: 0.03em;
@@ -358,6 +355,7 @@ body {
     display: flex;
     justify-content: center;
      gap: 30px;
+     margin-top: 30px;
 }
 
 .team-background {
@@ -430,6 +428,7 @@ body {
     display: flex;
     gap: 10px;
     justify-content: center;
+    margin-bottom: 30px;
 }
 
 /* socials footer */
