--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,7 @@ body {
                 }
         
                 .features .title {
+                    color: var(--title-text-color);
                     margin-top: 0;
                     margin-bottom: 10px;
                     font-weight: 700;
@@ -137,7 +138,7 @@ body {
         
                 .features .text {
                    
-                    color: var(--title-text-color);
+                    color: #757575;
                     font-size: 14px;
                     line-height: 1.7;
                          }
@@ -665,14 +666,7 @@ body {
 
  }
 
- .portfolio .item-port:not(:nth-child(3n + 3)) {
-     margin-right: 30px;
- }
-
- .portfolio .item-port:not(:nth-last-child(-n + 3)) {
-     margin-bottom: 30px;
- }
-
+ 
  .portfolio .list {
     display: flex;
         flex-wrap: wrap;
@@ -680,6 +674,8 @@ body {
  }
 
  .item-port {
+    margin-right: 30px;
+    margin-bottom: 30px;
     background: #FFFFFF;
     display: block;
  }
